- added Primitive Arraylists for int, long and double with accompanying interfaces - added IntWindowedIterator - added IntWindowedSequence